Fix mismatch bookmark button margins on iOS

--- a/src/Toolbar.module.scss
+++ b/src/Toolbar.module.scss
@@ -31,6 +31,16 @@
   }
 }
 
+.bookmarkButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  & > * {
+    margin: 4px 0;
+  }
+}
+
 .toolbarRow {
   display: flex;
   flex-direction: row;
