--- a/src/index.scss
+++ b/src/index.scss
@@ -52,3 +52,7 @@ button, [role="button"] {
 
   font-family: sans-serif;
 }
+
+button {
+  margin: 0;
+}
